--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    font-family: "rubik", sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 :root {
     --bg-color: #f4f6fa;
     --purple: #a729f5;
     --white:#fff;
+    --primary-text-color: #313e51;
     --bg-mobile: url(./assets/images/pattern--background-mobile-light.svg);
 }
 
@@ -20,7 +22,6 @@ body {
 }
 
 header {
-    border: 1px solid red;
 
     padding: 16px 24px;
     display: flex;
@@ -59,5 +60,13 @@ header {
 
 main {
     padding: 32px 24px;
-    
+
 }
+
+main h1{
+    font-size: 40px;
+    font-weight: 300;
+    color: var(--primary-text-color);
+
+}
+
