--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --purple: #a729f5;
     --white:#fff;
     --primary-text-color: #313e51;
+    --secondary-text-color:#626c7f;
     --bg-mobile: url(./assets/images/pattern--background-mobile-light.svg);
 }
 
@@ -63,10 +64,27 @@ main {
 
 }
 
-main h1{
+.boas_vindas{
+   margin-bottom: 40px; 
+}
+
+.boas_vindas h1{
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
+    margin-top: 16px;
 
 }
 
+.boas_vindas h1 strong {
+    font-weight: 500;
+
+
+}
+
+.boas_vindas p{
+    color: var(--secondary-text-color);
+    font-size: 14px;
+    line-height: 150px;
+    font-style: italic;
+}
