responsividade da hone finalizada

--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body {
 }
 
 header {
-
     padding: 16px 24px;
     display: flex;
     justify-content: flex-end;
@@ -154,8 +153,18 @@ main {
         margin-block: 81px;
     }
 
-    .tema{
+    .tema img{
+        width: 24px;
+    }
 
+    .tema button{
+        width: 48px;
+        height: 28px;
+    }
+
+    .tema button div {
+        width: 20px;
+        height: 20px;
     }
 
     main {
