--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -18,6 +18,8 @@
     --bg-javascript: #ebf0ff;
     --bg-acessibilidade: #f9e7ff;
     --white:#fff;
+    --green: #26d782;
+    --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
 }
@@ -149,8 +151,13 @@ main{
     box-shadow: var(--shadow);
     color: var(--primary-text-color);
 }
-.alternativas label:has(input:checked){
-    
+.alternativas 
+label:has(input:checked){
+    outline: 3px solid var(--purple);
+    & span {
+        background: var(--purple);
+        color: var(--white);
+    }
 }
 
 .alternativas input {
