--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -160,6 +160,23 @@ label:has(input:checked){
     }
 }
 
+.alternativas label#correta {
+    outline: 3px solid var(--green);
+
+    & span {
+        background: var(--green);
+        color: var(--white);
+    }
+}
+
+.alternativas label#errada {
+    outline: 3px solid var(--red);
+    & span {
+        background: var(--red);
+        color: var(--white);
+    }
+} 
+
 .alternativas input {
     display: none;
 }
