--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -233,6 +233,12 @@ label:has(input:checked){
 
 @media(min-width:1100px) {
 
+    body {
+        background: var(--bg-desktop) var(--bg-color);
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
     header{
         margin-block: 81px;
         max-width: 1160px;
