--- a/pages/resultados/resultado.css
+++ b/pages/resultados/resultado.css
@@ -103,14 +103,19 @@ header {
 }
 
 main{
-    padding: 32px 24px;
+    display: flex;
+    gap: 140px;
+    max-width: 1160px;
+    margin-inline: auto;
+}
+
+main h2,
+main > div {
+    width: 100%;
 }
 
 main h2 {
     font-size: 40px;
-    font-weight: 300;
-    color: var(--primary-text-color);
-    margin-bottom: 40px;
 }
 
 main h1 strong{
