--- a/pages/resultados/resultado.css
+++ b/pages/resultados/resultado.css
@@ -21,8 +21,6 @@
     --bg-javascript: #ebf0ff;
     --bg-acessibilidade: #f9e7ff;
     --white:#fff;
-    --green: #26d782;
-    --red: #ee5454;
     --bg-mobile: url(../../assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(../../assets/images/pattern-background-desktop-light.svg);
 }
@@ -116,26 +114,50 @@ main > div {
 
 main h2 {
     font-size: 40px;
+    font-weight: 300;
+    color: var(--primary-text-color);
+    margin-bottom: 40px;
+}
+
+main h2 strong {
+    font-weight: 500;
 }
 
 
 .pontuacao {
-    border-radius: 24px;
-    margin-bottom: 32px;
+    background: var(--pontuacao-bg);
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    border-radius: 12px;
+    margin-bottom: 12px;
+    box-shadow: var(--shadow);
+
 }
 
 .pontuacao strong{
-    font-size: 144px;
+    font-size: 88px;
+    color: var(--primary-text-color);
+    font-weight: 500;
 }
 
 .pontuacao p {
-    font-size: 24px;
+    color: var(--secondary-text-color);
+    font-size: 18px;
 }
 
 main button {
-    font-size: 22px;
-    padding: 24px;
-    border-radius: 24px;
+    padding: 16px;
+    border-radius: 12px;
+    border: none;
+    background: var(--purple);
+    color: var(--white);
+    width: 100%;
+    font-size: 18px;
+    font-weight: 500;
+    transition: background 0.3s;
 }
 
 main button:hover{
