arrumando as coisas que o marcio pediu

--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -15,11 +15,11 @@
     --primary-text-color: #313e51;
     --secondary-text-color:#626c7f;
     --button-bg: #fff;
-    --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
+    --shadow: 0px 16px 40px 0px rgba(143, 168, 193, 0.14);
     --bg-html: #fff1e9;
-    --bg-css: #e0fdef;
+    --bg-css: #e8fdef;
     --bg-javascript: #ebf0ff;
-    --bg-acessibilidade: #f9e7ff;
+    --bg-acessibilidade: #f6e7ff;
     --white:#fff;
     --green: #26d782;
     --red: #ee5454;
@@ -34,7 +34,7 @@ body.escuro {
     --bg-desktop: url(../../assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color:#fff;
     --secondary-text-color: #abc1e1;
-    --button-bg: #3b4d66;
+    --button-bg: #3b4b66;
     --shadow: 0px 16px 40px 0px rgba(49,62,81,0.14);
 }
 body {
@@ -114,7 +114,7 @@ header {
     background: var(--white);
     width: 12px;
     height: 12px;
-    border-radius: 999%;
+    border-radius: 999px;
 }
 
 main {
@@ -129,7 +129,6 @@ main {
     font-style: italic;
     font-size: 14px;
     color: var(--secondary-text-color);
-    line-height: 24px;
     margin-bottom: 12px;
 }
 
@@ -273,7 +272,7 @@ label:has(input:checked){
     }
 
     .tema{
-        width: 24px;
+        gap: 16px;
     }
 
     .tema img {
@@ -326,7 +325,7 @@ label:has(input:checked){
 
     .alternativas label{
         font-size: 22px;
-        padding: 18px 28px;
+        padding: 18px 20px;
         border-radius: 24px;
     }
 
