--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
     --primary-text-color: #313e51;
     --secondary-text-color:#626c7f;
     --button-bg: #fff;
-    --shadow: 0px 16px 40px 0px rgba(143, 160, 193, 0.14);
+    --shadow: 0px 16px 40px 0px rgba(143, 168, 193, 0.14);
     --bg-html: #fff1e9;
-    --bg-css: #e0fdef;
+    --bg-css: #e8fdef;
     --bg-javascript: #ebf0ff;
-    --bg-acessibilidade: #f9e7ff;
+    --bg-acessibilidade: #f6e7ff;
     --white:#fff;
     --bg-mobile: url(./assets/images/pattern-background-mobile-light.svg);
     --bg-desktop: url(./assets/images/pattern-background-desktop-light.svg);
@@ -28,7 +28,7 @@ body.escuro {
     --bg-desktop: url(./assets/images/pattern-background-desktop-dark.svg);
     --primary-text-color:#fff;
     --secondary-text-color: #abc1e1;
-    --button-bg: #3b4d66;
+    --button-bg: #3b4b66;
     --shadow: 0px 16px 40px 0px rgba(49,62,81,0.14);
 }
 
@@ -64,7 +64,7 @@ header {
     height: 20px;
     width: 32px;
     background: var(--purple);
-    border: 0px;
+    border: 0;
     border-radius: 999px;
     padding: 4px;
     display: flex;
@@ -91,7 +91,7 @@ main {
     font-size: 40px;
     font-weight: 300;
     color: var(--primary-text-color);
-    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 .boas_vindas h1 strong {
@@ -101,7 +101,7 @@ main {
 .boas_vindas p{
     color: var(--secondary-text-color);
     font-size: 14px;
-    line-height: 150px;
+    line-height: 150%;
     font-style: italic;
 }
 .assuntos{
@@ -152,7 +152,7 @@ main {
 }
 
 .botao_acessibilidade div {
-    color: var(--bg-acessibilidade);
+    background: var(--bg-acessibilidade);
 }
 
 @media (min-width:1100px) {
@@ -164,6 +164,10 @@ main {
 
     header {
         margin-block: 81px;
+    }
+
+    .tema {
+        gap: 16px;
     }
 
     .tema img{
